@startuml
class Cliente {
    -String nome
    -long rg
    -long cpf
    -String endereco
    -String profissao
    -List<String> empregadores
    -List<Double> rendimentos
    -List<Locacao> locacoes
    +Cliente(String nome, long rg, long cpf, String endereco, String profissao, List<String> empregadores, List<Double> rendimentos)
    +Locacao criarLocacao(Cliente cliente, Automovel automovel, Duracao duracao)
}

class Empresa {
    -String nome
    +Empresa(String nome)
    +Locacao alterarLocacao(Locacao locacao)
}

class Banco {
    +void avaliarContratoCredito(Locacao locacao)
    -ContratoCredito criarContratoCredito()
}

class Locacao {
    -Cliente cliente
    -Automovel automovel
    -Duracao duracao
    -StatusLocacao statusLocacao
    -Date dataAprovacao
    +Locacao(Cliente cliente, Automovel automovel, Duracao duracao)
    +void alterarLocacao()
    +void consultarLocacao()
    +void cancelarLocacao()
    +void avaliarLocacao()
    +void vincularContrato()
    +void vincularContratoCredito(Banco banco)
}

enum StatusLocacao {
    PENDENTE
    APROVADA
    REPROVADA
    CANCELADA
}

class Automovel {
    -String matricula
    -int ano
    -String marca
    -String modelo
    -String placa
    +Automovel(String matricula, int ano, String marca, String modelo, String placa)
}

class Contrato {
    -Locacao locacao
    -Empresa empresa
    +Contrato(Locacao locacao, Empresa empresa)
}

class ContratoCredito {
    +ContratoCredito(Locacao locacao, Banco banco) 
}

enum Duracao {
    12_MESES
    24_MESES
    36_MESES
    48_MESES
}

Cliente "1" --o "1..*" Locacao
Empresa "1" --o "0..*" Contrato
Locacao "0..*" o-- "1" Automovel
Locacao --o Contrato
Empresa <|-- Banco
Contrato <|-- ContratoCredito

@enduml